name:			categories
category:		Control, Monads
version:		0.3
license:		BSD3
license-file:		LICENSE
build-depends:		base -any
author:			Edward A. Kmett
maintainer:		ekmett@gmail.com
stability:		experimental
homepage:		http://comonad.com/
synopsis:		Category Library
copyright:		Copyright (C) 2008 Edward A. Kmett
description: 		Defines functors, monads, etc over arbitrary categories rather than just endofunctors on 
			the category of types. Also introduces the notion of a category transformer, which 
			generalizes the notion of an Arrow transformer. Using categories in this fashion we can 
			reconstruct BiArrows correctly without any flotsam in the type, and we can similarly 
			construct a number of other useful notions from category theory that do not form Arrows.

extensions:		
	CPP, 
	EmptyDataDecls, 
	FlexibleContexts,
	FlexibleInstances,
	FunctionalDependencies, 
	MultiParamTypeClasses, 
	TypeFamilies, 
	TypeSynonymInstances,
	TypeOperators,
	UndecidableInstances,
	GADTs


exposed-modules:
	Control.Category.Classes,
	Control.Category.Arrow,
	Control.Category.Arrow.Dual,
	Control.Category.Based,	
	Control.Category.Bifunctor,
	Control.Category.Bifunctor.Associative,
	Control.Category.Bifunctor.Braided,
	Control.Category.Bifunctor.Monoidal,
	Control.Category.Cartesian,
	Control.Category.Cartesian.Closed,
	Control.Category.Distributive,
	Control.Category.Functor,		
	Control.Category.Functor.Adjunction,	
	Control.Category.Functor.Algebra,
	Control.Category.Functor.Applicative,
	Control.Category.Functor.Composition,
	Control.Category.Functor.Full
	Control.Category.Functor.Identity,
	Control.Category.Functor.Native,
	Control.Category.Functor.Pointed,
	Control.Category.Functor.Representable,
	Control.Category.Monad,	
	Control.Category.Morphism,	
	Control.Category.Comonad,	
	Control.Category.Comonad.Reader,	
	Control.Category.Groupoid,
	Control.Category.Loop,
	Control.Category.Object,
	Control.Category.Transformer,
	Control.Category.Transformer.Reader

	Control.Category.Functor.Instances,
	Control.Category.Dual,
	Control.Category.Comma,
	Control.Category.Hask,	
	Control.Category.Kleisli

ghc-options:		-O2 -funbox-strict-fields
hs-source-dirs:		src
