name:			type-int
category:		Type
version:		0.3
license:		BSD3
license-file:		LICENSE
build-depends:		template-haskell -any, base -any
author:			Edward Kmett
maintainer:		ekmett@gmail.com
stability:		alpha
homepage:		http://slipwave.info/
synopsis:		Type Level 2s- and 16s- Complement Integers
copyright:		Copyright (C) 2006 Edward Kmett. All Rights Reserved
description: 		Type level 2s- and 16s- complement integers (positive and negative), booleans, ord and eq
extensions:		MultiParamTypeClasses, FunctionalDependencies, TemplateHaskell, UndecidableInstances, CPP
exposed-modules:
	Type.Boolean, 
	Type.Ord, 
	Type.Binary, 
	Type.Binary.Internals, 
	Type.Binary.TH,
	Type.Hex,
	Type.Hex.Stage1,
	Type.Hex.Stage2,
	Type.Hex.Stage3
ghc-options:		-O2 -funbox-strict-fields
hs-source-dirs:		src
